@@ -1,0 +1,1 @@
+add muslimic prayer times: http://www.nabkal.de/namazrech.html
