@@ -1,3 +1,8 @@
+2012-12-24  Steffen Vogel  <post@steffenvogel.de>
+
+	* removed geonames from make target 'check'
+	due to problems with chrooted autobuild networks
+
 2012-12-23  Steffen Vogel  <post@steffenvogel.de>
 
 	* added caching for geonames.org lookups:
